@@ -1,0 +1,4 @@
+Type: Choice
+
+Value: direct
+Value: indirect
