@@ -23,6 +23,8 @@
 #define OPTION_GRAPHICS_CARD "graphics_card"
 #define OPTION_GRAPHICS_CARD_ROM "graphics_card_rom"
 #define OPTION_GRAPHICS_CARD_MEMORY "graphics_card_memory"
+#define OPTION_JIT_COMPILER "jit_compiler"
+#define OPTION_JIT_MEMORY "jit_memory"
 #define OPTION_JOYSTICK_PORT_0_AUTOSWITCH "joystick_port_0_autoswitch"
 #define OPTION_LINE_DOUBLING "line_doubling"
 #define OPTION_LOG_AUTOSCALE "log_autoscale"
