@@ -1,5 +1,8 @@
 Version 2.5.41dev:
 
+* New boolean option jit_compiler (to enable/disable JIT compilation).
+* New option jit_memory (=direct/indirect).
+* JIT compiler defaults to direct memory access on all platforms now.
 * JIT direct memory exception handler for OS X (32-bit).
 
 Version 2.5.40dev:
